force-app/main/default/objects/Devices__c/Devices__c.object-meta.xml
<CustomObject>
    <label>Device</label>
    <nameField>
        <label>Devices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>