force-app/main/default/objects/Devices__c/fields/Steps_to_use__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_use__c</fullName>
    <label>Steps to use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>