force-app/main/default/objects/Devices__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Small gadgets</fullName>
            </value>
            <value>
                <fullName>Transistor</fullName>
            </value>
            <value>
                <fullName>Transformer</fullName>
            </value>
            <value>
                <fullName>Day care Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>